cargo-features = ["edition"]

[package]
name = "phc"
version = "0.2.0"
authors = ["Kyle Strohbeck <kstrohbeck@gmail.com>"]
description = "PHC string encoding/decoding library."
license = "MIT"
repository = "https://github.com/kstrohbeck/phc"
edition = "2018"

[dependencies]
base64 = "0.9.3"
nom = "4.0.0"
